# include_url_macro

./: Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: tests.rs
tests/compile-fail/: invalid_json.rs  invalid_json.stderr  invalid_json_type.rs  invalid_url.rs  invalid_url.stderr
