[package]
name = "include_url_macro"
version = "0.1.0"
edition = "2021"
description = "A procedural macro to include URL content as static strings at compile time"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.4"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"                                 

[dev-dependencies]
trybuild = "1.0.103"
