[package]
name = "include_url_macro"
version = "0.1.0"
edition = "2021"
description = "A procedural macro to include URL content as static strings at compile time"
license = "MIT"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
repository = "https://github.com/hahihula/include_url_macro"
documentation = "https://docs.rs/include_url_macro"
readme = "README.md"
keywords = ["macro", "include", "url", "static", "compile-time"]
categories = ["development-tools::procedural-macro-helpers"]

[features]
default = ["brotli"]
brotli = ["dep:brotli"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "json",
    "stream",
    "rustls-tls",
    "blocking",
] }
bytes = "1"
sha2 = "0.10.9"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
brotli = { version = "8.0.2", optional = true }

[dev-dependencies]
trybuild = "1.0.103"

[build-dependencies]
cargo-emit = "0.1"
